--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Philips Hue client for Node.js.",
   "main": "lib/index.js",
   "scripts": {
-    "compile": "npx tsc --noEmit"
+    "compile": "npx tsc --noEmit",
+    "build": "npx rollup -c"
   },
   "repository": {
     "type": "git",
