--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "compile": "npx tsc --noEmit",
-    "build": "npx rollup -c"
+    "build": "npx rollup -c",
+    "test": "npx jest"
   },
   "repository": {
     "type": "git",
