--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "homepage": "https://github.com/sakai-akinobu/hue-client#readme",
   "devDependencies": {
     "@types/jest": "^24.0.11",
+    "@typescript-eslint/eslint-plugin": "^1.7.0",
+    "eslint": "^5.16.0",
     "jest": "^24.7.1",
     "rollup": "^1.10.1",
     "rollup-plugin-typescript2": "^0.21.0",
