--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/sakai-akinobu/hue-client#readme",
   "devDependencies": {
     "@types/jest": "^24.0.11",
+    "@types/request-promise-native": "^1.0.16",
     "@typescript-eslint/eslint-plugin": "^1.7.0",
     "eslint": "^5.16.0",
     "jest": "^24.7.1",
