--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/request-promise-native": "^1.0.16",
     "@typescript-eslint/eslint-plugin": "^1.7.0",
     "eslint": "^5.16.0",
+    "husky": "^2.1.0",
     "jest": "^24.7.1",
     "rollup": "^1.10.1",
     "rollup-plugin-typescript2": "^0.21.0",
